pulseaudio (5.0-3) UNRELEASED; urgency=medium

  * Drop workaround for ARM < v6, upstream now conditionally compiles it.
  * Add udev rule for Asus P5K-SE motherboard. Closes: #744831

 -- Felipe Sateler <fsateler@debian.org>  Mon, 14 Apr 2014 10:02:36 -0300

pulseaudio (5.0-2) unstable; urgency=low

  [ Balint Reczey ]
  * Fix FTBFS on ARM architectures

  [ Felipe Sateler ]
  * Add myself to uploaders
  * Install pulseaudio shell completions
  * Add Breaks: on versions of jack with no latency API.
     Closes: #685258
  * Make pulseaudio-dbg Recommend libpulse0-dbg
  * Drop xz flag to dh_builddeb, it is now default
  * Try to ensure on non-arm platforms that the arm workaround will work
  * Use canonical vcs addresses
  * Don't pass start and stop arguments to update-rc.d, they are ignored

  [ Sjoerd Simons ]
  * debian/control: remove Martin-Éric Racine from Uploaders at his request

 -- Sjoerd Simons <sjoerd@debian.org>  Fri, 11 Apr 2014 21:30:05 +0200

pulseaudio (5.0-1) unstable; urgency=medium

  [ Balint Reczey ]
  * Add myself to uploaders

  [ Wookey ]
  * Add stage1 DEB_BUILD_PROFILES initial bootstrap support (Closes: #735485)

  [ Jonas Eriksson ]
  * Use channel 2 for raop sink (Closes: #658733)

  [ Alexander Kurtz ]
  * Exit PA with X session closing when PA is started by the session
    (Closes: #594001)

  [ Balint Reczey ]
  * Don't pass --disable-hal to ./configure (Closes: #729494)

  [ Justin B Rye ]
  * Make pulseaudio-utils suggest pulseaudio

  [ Luca Capello ]
  * Explain how to set up PulseAudio in a chroot (Closes: #649884)

  [ Balint Reczey ]
  * Imported Upstream version 5.0
  * Make PA init script start PA unconditionally upon restart (Closes: #738143)
  * Recommend consolekit instead of depending on it (Closes: #611491)
  * Fix typo in debian/control

  [ Sjoerd Simons ]
  * Refresh patches:
    + d/p/0002-Use-the-fixed-point-speex-resampler-on-ARM.patch
    + d/p/kfreebsd_no_lock_and_threads_synchro.patch