@@ -2,6 +2,7 @@ pulseaudio (5.0-3) UNRELEASED; urgency=medium
 
   * Drop workaround for ARM < v6, upstream now conditionally compiles it.
   * Add udev rule for Asus P5K-SE motherboard. Closes: #744831
+  * Drop special patches rule, not used anymore
 
  -- Felipe Sateler <fsateler@debian.org>  Mon, 14 Apr 2014 10:02:36 -0300
 
